# Tsunami-Simulation

./: .buildinfo  .editorconfig  .gitignore  .gitmodules  AMRCoreWavePropagation2d_8h_source.html  ArgSetup_8h_source.html  ArgSetup_8test_8h_source.html  ArtificialTsunami2d_8h_source.html  CMakeLists.txt  CheckPoint_8h_source.html  CircularDamBreak2d_8h_source.html  Csv_8h_source.html  DamBreak1d_8h_source.html  FWave_8h_source.html  MiddleStates1d_8h_source.html  NetCdf_8h_source.html  RareRare1d_8h_source.html  Roe_8h_source.html  Setup_8h_source.html  ShockShock1d_8h_source.html  Stations_8h_source.html  SubcriticalFlow1d_8h_source.html  SupercriticalFlow1d_8h_source.html  TsunamiEvent1d_8h_source.html  TsunamiEvent2d_8h_source.html  WavePropagation1d_8h_source.html  WavePropagation2d_8h_source.html  WavePropagation_8h_source.html  annotated.html  classArgSetup.html  classes.html  classtsunami__lab_1_1amr_1_1AMRCoreWavePropagation2d.html  classtsunami__lab_1_1io_1_1Csv-members.html  classtsunami__lab_1_1io_1_1Csv.html  classtsunami__lab_1_1io_1_1NetCdf-members.html  classtsunami__lab_1_1io_1_1NetCdf.html  classtsunami__lab_1_1io_1_1Stations-members.html  classtsunami__lab_1_1io_1_1Stations.html  classtsunami__lab_1_1patches_1_1WavePropagation-members.html  classtsunami__lab_1_1patches_1_1WavePropagation.html  (+52 more)
.github/workflows/: docs.yml  main.yml  prebuild_docs.yml
_downloads/6d6069f246958519f8f7467564c02e5e/: opt_gnu_O2.optrpt
_sources/: index.rst.txt
_sources/getting_started/: building_project.rst.txt  building_simulation.rst.txt
_sources/submissions/: tsunami_simulation.rst.txt  two_dimensional_solver.rst.txt
_static/: AMRFlowchart.drawio  style.css
api/: tsunami_lab.html
cmake/: FindNetCDF.cmake
docs_sphinx/: Makefile  conf.py  index.rst  make.bat  remove_tag.py  requirements.txt
docs_sphinx/api/: tsunami_lab.rst
docs_sphinx/getting_started/: building_docs.rst  building_project.rst  building_simulation.rst
docs_sphinx/prebuild/: ArgSetup_8h_source.html  ArgSetup_8test_8h_source.html  ArtificialTsunami2d_8h_source.html  CheckPoint_8h_source.html  CircularDamBreak2d_8h_source.html  Csv_8h_source.html  DamBreak1d_8h_source.html  FWave_8h_source.html  Kernels_8h_source.html  MiddleStates1d_8h_source.html  NetCdf_8h_source.html  RareRare1d_8h_source.html  Roe_8h_source.html  Setup_8h_source.html  ShockShock1d_8h_source.html  Stations_8h_source.html  SubcriticalFlow1d_8h_source.html  TsunamiEvent1d_8h_source.html  TsunamiEvent2d_8h_source.html  WavePropagation1d_8h_source.html  WavePropagation2d_8h_source.html  WavePropagation_8h_source.html  annotated.html  classArgSetup-members.html  classArgSetup.html  classes.html  classtsunami__lab_1_1amr_1_1AMRCoreWavePropagation2d-members.html  classtsunami__lab_1_1io_1_1Csv.html  classtsunami__lab_1_1io_1_1NetCdf-members.html  classtsunami__lab_1_1io_1_1NetCdf.html  classtsunami__lab_1_1patches_1_1WavePropagation-members.html  classtsunami__lab_1_1patches_1_1WavePropagation.html  classtsunami__lab_1_1patches_1_1WavePropagation1d-members.html  classtsunami__lab_1_1patches_1_1WavePropagation1d.html  classtsunami__lab_1_1patches_1_1WavePropagation2d-members.html  classtsunami__lab_1_1patches_1_1WavePropagation2d.html  classtsunami__lab_1_1setups_1_1ArtificialTsunami2d-members.html  classtsunami__lab_1_1setups_1_1ArtificialTsunami2d.html  classtsunami__lab_1_1setups_1_1CircularDamBreak2d.html  classtsunami__lab_1_1setups_1_1DamBreak1d-members.html  (+34 more)
docs_sphinx/review/: .buildinfo  _dam_break1d_8h_source.html  _setup_8h_source.html  _wave_propagation_8h_source.html  annotated.html  classes.html  classtsunami__lab_1_1setups_1_1_setup.html  classtsunami__lab_1_1solvers_1_1_roe.html  constants_8h_source.html  dir_949292de90bec6ca0ef87cb838b26113.html  dir_a00b633439466cbb1729245c7f66f564.html  dir_e1eb6ff3a01ec55a48c7bf15275054d6.html  files.html  functions.html  functions_func.html  genindex.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  namespacetsunami__lab.html  objects.inv  search.html  searchindex.js
docs_sphinx/submissions/: amrex.rst  bathymetry_boundary_conditions.rst  checkpoint_coarse_output.rst  finite_volume_discretization.rst  individual_phase.rst  large_data_input_output.rst  optimization.rst  parallelization.rst  riemann_solver.rst  tsunami_simulation.rst  two_dimensional_solver.rst
getting_started/: building_docs.html  building_project.html  building_simulation.html
include/: constants.h  utiles.h
include/amr/: AMRCoreWavePropagation2d.h  Kernels.h
include/io/: ArgSetup.h  ArgSetup.test.h  Csv.h  NetCdf.h  Stations.h
include/patches/: WavePropagation.h  WavePropagation1d.h  WavePropagation2d.h
include/setups/: ArtificialTsunami2d.h  CheckPoint.h  CircularDamBreak2d.h  DamBreak1d.h  MiddleStates1d.h  RareRare1d.h  Setup.h  ShockShock1d.h  SubcriticalFlow1d.h  SupercriticalFlow1d.h  TsunamiEvent1d.h  TsunamiEvent2d.h
include/solvers/: FWave.h  Roe.h
resources/: AverageSeveral_M.test.txt  WriteNetCDF.test.nc  WriteNetCDF.test.txt  WriteNetCDF_M.test.txt  WriteNetCDF_S.test.txt  bathy_profile.csv  config.json  config.test.json  inputs.amrex  middle_states.test.csv
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+11 more)
src/: main.cpp  runVTuneAnalysis.sh  test_middle_states.cpp  tests.cpp
src/io/: Csv.cpp  (+6 more)
submissions/: bathymetry_boundary_conditions.html  checkpoint_coarse_output.html  finite_volume_discretization.html  individual_phase.html  large_data_input_output.html  parallelization.html  riemann_solver.html  tsunami_simulation.html  two_dimensional_solver.html
(+218 files in other folders)
